Wed Jan 26 15:10:02 CET 2005 (tk)
---------------------------------
  * shared/misc.c: freshdbdir(): fix possible dbdir string corruption
		   (reported by ST Wong <st-wong*cuhk.edu.hk>)

Wed Jan 26 10:38:08 CET 2005 (tk)
---------------------------------
  * configure: improve curl check (thanks to Martin Forssen <maf*appgate.com>)

Wed Jan 26 10:15:47 CET 2005 (tk)
---------------------------------
  * shared/output.c: change output modes (more stdout output). Patch by
		     Stephen Gran <steve*lobefin.net>.

Wed Jan 26 09:23:48 CET 2005 (tk)
---------------------------------
  * libclamav/snprintf.c: add missing MAX macro (thanks to Ted Mittelstaedt
			  <tedm*toybox.placo.com>)

Tue Jan 25 08:12:51 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Internal mode is now the default. Removed --internal
				option, added --external.
			Don't use clamd's SESSION mode, since that causes
				problems with clamd/freshclam when freshclam
				is run. SESSION mode can be enabled from
				the source code. Most people can use SESSION
				mode safely, but it has caused problems on BSD

Tue Jan 25 06:13:29 CET 2005 (tk)
---------------------------------
  * freshclam/manager.c: properly count signatures in --no-dns mode (problem
			 reported by Tomasz Papszun)

Tue Jan 25 05:09:42 CET 2005 (tk)
---------------------------------
  * clamscan/manager.c: fix bad path completion when using options for external
			compressors (reported by Robert Allerstorfer
			<roal*anet.at>)

Mon Jan 24 20:12:06 CET 2005 (tk)
---------------------------------
  * freshclam: improve error messages (patch by Luca Gibelli <luca*clamav.net>)

Mon Jan 24 17:54:14 CET 2005 (tk)
---------------------------------
  * clamd/thrmgr.c: unlock mutex if thread->state != POOL_VALID in
		    thrmgr_dispatch() (thanks to "Andrey J. Melnikoff
		    (TEMHOTA)" <temnota*kmv.ru>)

Mon Jan 24 13:56:19 GMT 2005 (njh)
----------------------------------